--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ h1, h2, h3, p, a, ul {
     list-style: none;
 }
 body {
-font-family: "Roboto", sans-serif;
+    font-family: "Roboto", sans-serif;
     background-color: #ffffff;
     color: #434455;
 }
@@ -38,7 +38,8 @@ font-family: "Roboto", sans-serif;
 }
 @media only screen and (min-width: 1158px) {
     .container {
-        max-width: 1440px;
+        max-width: 1158px;
+        padding: 0 15px;
     }
 }
 
@@ -51,6 +52,8 @@ font-family: "Roboto", sans-serif;
 }
 img {
     display: block;
+    /* max-width: 100%;
+    height: auto; */
 }
 /* header */
 .header {
@@ -153,9 +156,10 @@ img {
     color: var(--ocean);
 }
 .address-list-item {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
+    font-weight: 400;
+    font-size: 12px; 
+    line-height: 1.17;
+    letter-spacing: 0.04em;
     color: var(--slate);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -177,8 +181,8 @@ img {
     .address-list {
         display: flex;
         flex-wrap: wrap;
-        gap: 12px;
-        justify-content: right;
+        gap: 12px;    
+        margin-left: 121px;
     }
     .header-menu-button {
         display: none;
@@ -190,8 +194,13 @@ img {
         margin-right: 76px;
     }
     .address-list {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
         display: flex;
         gap: 40px;
+        justify-content: right;
     }
 }
 
@@ -205,7 +214,7 @@ img {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    max-width: 100%;
+    max-width: 320px;
 }
 .solutions-container {
     display: flex;
@@ -254,13 +263,17 @@ img {
     }
 }
 @media only screen and (min-width: 768px) {
+    .section-solutions {
+        max-width: 768px;
+    }
     .solutions-logo {
         font-size: 56px;
         margin-bottom: 36px;
         max-width: 496px;
     }
     .section-solutions {
-        padding-top: 112px ;
+        padding-top: 112px;
+        padding-bottom: 112px;
         background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/hero-banner-tabl.jpg");
     }
 
@@ -272,6 +285,9 @@ img {
 }
 
 @media only screen and (min-width: 1158px) {
+    .section-solutions {
+        max-width: 1440px;
+    }
     .solutions-logo {
         font-size: 56px;
         margin-bottom: 48px;
@@ -279,6 +295,7 @@ img {
     }
     .section-solutions {
         padding-top: 188px;
+        padding-bottom: 188px;
         background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/hero-banner-desktop.jpg");
     }
     @media (min-resolution: 192dpi) {
@@ -310,6 +327,7 @@ img {
     display: flex;
     flex-wrap: wrap;
     gap: 72px;
+    max-width: 288px;
 }
 .strategy-list-icn {
     display: flex;
@@ -342,7 +360,7 @@ img {
 
 @media only screen and (min-width: 768px) {
     .strategy-nav {
-
+        max-width: 736px;
         row-gap: 72px;
         column-gap: 24px;
     }
@@ -357,16 +375,14 @@ img {
 
 
 @media only screen and (min-width: 1158px) {
-    .container {
-        max-width: 1158px;
-        padding: 0 15px;
+    .strategy {
+        padding: 120px 0;
     }
     .strategy-nav {
         max-width: 1128px;
         display: flex;
         gap: 24px;
-        align-items: center;
-       
+        align-items: center;       
     }
     .strategy-list-icn {
         display: flex;
@@ -402,6 +418,7 @@ img {
 .team-designer {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     gap: 72px;
 }
 .team-list {
@@ -422,7 +439,6 @@ img {
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    margin-bottom: 8px;
     text-align: center;
     color: var(--navy);
 }     
@@ -433,7 +449,6 @@ img {
     letter-spacing: 0.02em;
     text-align: center;
     color: var(--slate);
-    margin-bottom: 8px;
 }
 .team-icon {
     display: flex;
@@ -469,29 +484,26 @@ img {
 }
 
 @media only screen and (min-width: 768px) {
-    .container {
-        max-width: 768px;
-        padding: 96px 108px;
-    }
     .team-designer {
         row-gap: 64px;
         column-gap: 24px;
     }
     .team-list {
         max-width: calc((100% - 24px) / 2);
-        margin: 0 auto;
     }
 }
 
 @media only screen and (min-width: 1158px) {
-    .container {
-        max-width: 1440px;
+    .team {
+        padding: 0;
+    }
+    .container-desinger {
         padding: 120px 156px;
     }
     .team-designer {
         display: flex;
         gap: 24px;
-        justify-content: space-between;
+        flex-wrap: nowrap;
     }
     .team-icon-link {
         text-align: center;
@@ -517,11 +529,8 @@ img {
     gap: 48px;
 }
 .portfolio-list-l {
-    border: 1px solid var(--cornflower);
-    height: 420px;
     text-align: center;
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     position: relative;
     overflow: hidden;
 }
@@ -574,22 +583,27 @@ img {
 }
 
 @media only screen and (min-width: 768px) {
-    .container {
-        max-width: 736px;
-        padding: 0;
+    .container-our-portfolio {
+        /* max-width: 736px; */
     }
     .portfolio-list {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         row-gap: 72px;
         column-gap: 24px;
     } 
     .portfolio-list-l {
-    max-width: calc((100% - 24px) / 2);
+        max-width: calc((100% - 24px) / 2);
     }
 }
 
 @media only screen and (min-width: 1158px) {
-    .container {
-        max-width: 1128px;
+    .portfolio {
+        padding: 0;
+    }
+    .container-our-portfolio {
+        margin: 120px 156px;
         padding: 0;
     }
     .portfolio-list {
@@ -601,6 +615,10 @@ img {
     }
     .portfolio-list-l {
         max-width: calc((100% - 2 * 24px) / 3);
+        box-shadow: none;
+    }
+    .portfolio-list-l:hover {
+        box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
     }
 }
 
@@ -608,12 +626,15 @@ img {
 
 .footer {
     background: var(--navy);
+    padding-top: 96px;
+    padding-bottom: 96px;
 }
 .footer-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 96px 16px;
+    padding-right: 16px;
+    padding-left: 16px;
 } 
 .container-footer {
     display: flex;
@@ -714,7 +735,7 @@ img {
 .footer-form-email {
     border: 1px solid #ffffff;;
     border-radius: 4px;
-    width: 264px;
+    width: 288px;
     height: 40px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     background-color: transparent;
@@ -759,9 +780,11 @@ input::placeholder {
     }
     .container-footer-list {
         width: 50%;
+        padding-left: 80px;
     }
     .footer-text {
-        width: 100%;
+        width: 264px;
+        margin-right: 24px;
     }
     .footer-list {
         margin-bottom: 17.5px;
@@ -770,16 +793,17 @@ input::placeholder {
         width: 50%;
     }
     .footer-form-footer {
-        width: 100%;
         justify-content:flex-start;
     }
+    .footer-form {
+        padding-left: 80px;
+    }
     .footer-form-labl {
-        width: 50%;
-        padding-right: 24px;
+        margin-right: 24px;
         margin-bottom: 0;
     }
     .footer-form-email {
-        width: 100%;
+        width: 264px;
     }
 }
 
@@ -787,9 +811,20 @@ input::placeholder {
     .footer {
         background: var(--navy);
         padding: 100px 0;
+        max-width: 1440px;
+    }
+    .footer-container {
+        margin: 0 140px;
+    }
+    .container-footer {
+        margin-bottom: 0;
     }
     .container-footer-list {
         max-width: 33.33%;
+        padding-left: 0;
+    }
+    .footer-text {
+        margin-right: 120px;
     }
     .container-social {
         max-width: 25%;
@@ -799,9 +834,11 @@ input::placeholder {
         justify-content: center;
         align-items: center;
         gap: 16px;
+        margin-right: 80px;
     }
     .footer-form {
         max-width: 41.66%;
+        padding-left: 0;
     }
     .footer-form-labl {
         width: auto;
@@ -824,6 +861,14 @@ input::placeholder {
     height: 100%;
     background-color: rgba(46, 47, 66, 0.4);
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    opacity: 0;
+    visibility: hidden ;
+    pointer-events: none;
+}
+.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
 }
 .modal {
     position: absolute;
@@ -834,11 +879,10 @@ input::placeholder {
     min-width: 288px;
     max-height: 623px;
     border-radius: 4px;
-    padding: 24px;
-    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);    
     background: var(--dairy);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    padding: 72px 24px 24px 24px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);    
+    padding: 72px 16px 24px 16px;
 }
 .popup-close {
     position: absolute;
@@ -1004,6 +1048,7 @@ input:focus+svg {
     .modal {       
     min-width: 408px;
     max-height: 584px;
+    padding: 72px 24px 24px 24px;
     }
 .form-box-text-span {
     margin-top: 0;
@@ -1014,6 +1059,7 @@ input:focus+svg {
     .modal {
         min-width: 408px;
         max-height: 584px;
+        padding: 72px 24px 24px 24px;
     }
     
     .form-box-text-span {
@@ -1025,7 +1071,7 @@ input:focus+svg {
  /* mobile-menu */
 
 .mobile-menu-wrap {
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     width: 100%;
@@ -1056,9 +1102,6 @@ input:focus+svg {
     padding: 0;
     cursor: pointer;
 }
-.header-nav-menu {
-    margin-bottom: 168px;
-}
 .header-mob-nav {
     font-weight: 700;
     font-size: 36px;
@@ -1081,6 +1124,22 @@ input:focus+svg {
 .header-mob-adr {
     margin-bottom: 24px;
 }
+.header-mob-adr-no {
+    margin-bottom: 0;
+}
+.header-mob-address {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: var(--slate);
+}
+.header-mob-address:hover {
+    color: var(--iris);
+}
+.header-mob-address:focus {
+    color: var(--iris);
+}
 .header-mob-icon-net {
     display: flex;
     justify-content: center;
@@ -1088,10 +1147,17 @@ input:focus+svg {
     flex-direction: row;
     gap: 40px;
     width: 100%;
+    margin-top: 48px;
 }
 .header-mob-icon {
     width: 40px;
     height: 40px;
 }
+@media only screen and (min-width: 768px) {
+    .header-mob-menu {
+        display: none;
+    }
+}
+
 
 
