--- a/css/styles.css
+++ b/css/styles.css
@@ -194,13 +194,16 @@ img {
         margin-right: 76px;
     }
     .address-list {
+        display: flex;
+        gap: 40px;
+        justify-content: right;
+        margin-left: 0;
+    }
+    .address-list-item {
         font-weight: 400;
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;
-        display: flex;
-        gap: 40px;
-        justify-content: right;
     }
 }
 
@@ -495,10 +498,7 @@ img {
 
 @media only screen and (min-width: 1158px) {
     .team {
-        padding: 0;
-    }
-    .container-desinger {
-        padding: 120px 156px;
+        padding: 120px 0;
     }
     .team-designer {
         display: flex;
@@ -583,9 +583,6 @@ img {
 }
 
 @media only screen and (min-width: 768px) {
-    .container-our-portfolio {
-        /* max-width: 736px; */
-    }
     .portfolio-list {
         display: flex;
         justify-content: center;
@@ -600,11 +597,7 @@ img {
 
 @media only screen and (min-width: 1158px) {
     .portfolio {
-        padding: 0;
-    }
-    .container-our-portfolio {
-        margin: 120px 156px;
-        padding: 0;
+        padding: 120px 0;
     }
     .portfolio-list {
         display: flex;
@@ -775,16 +768,21 @@ input::placeholder {
     .footer {
         background: var(--navy);
     }
+    .footer-container {
+        padding-left: 108px;
+        padding-right: 108px;
+    }
+    .container-container {
+        display: flex;
+    }
     .container-footer {
         align-items: flex-start;
     }
     .container-footer-list {
-        width: 50%;
-        padding-left: 80px;
+        margin-right: 24px;
     }
     .footer-text {
         width: 264px;
-        margin-right: 24px;
     }
     .footer-list {
         margin-bottom: 17.5px;
@@ -796,7 +794,6 @@ input::placeholder {
         justify-content:flex-start;
     }
     .footer-form {
-        padding-left: 80px;
     }
     .footer-form-labl {
         margin-right: 24px;
@@ -814,30 +811,32 @@ input::placeholder {
         max-width: 1440px;
     }
     .footer-container {
-        margin: 0 140px;
+        display: flex;
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+    .container-container {
     }
     .container-footer {
         margin-bottom: 0;
     }
     .container-footer-list {
-        max-width: 33.33%;
+        margin-right: 120px;
         padding-left: 0;
     }
     .footer-text {
-        margin-right: 120px;
     }
     .container-social {
-        max-width: 25%;
+        margin-right: 80px;
     }
     .footer-icon {
         display: flex;
         justify-content: center;
         align-items: center;
         gap: 16px;
-        margin-right: 80px;
     }
     .footer-form {
-        max-width: 41.66%;
+        max-width: 41,33%;
         padding-left: 0;
     }
     .footer-form-labl {
@@ -1004,6 +1003,8 @@ input:focus+svg {
     letter-spacing: 0.04em;
     display: flex;
     color: var(--light-slate); 
+    display: flex;
+    align-items: center;
 }
 .form-box-text-span {
     width: 16px;
@@ -1011,12 +1012,13 @@ input:focus+svg {
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 2px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
     fill: transparent;
     margin-right: 8px;
-    margin-top: 7.5px;
+}
+.form-box-icon-checkbox {
+    width: 16px;
+    height: 16px;
+    flex-shrink: 0;
 }
 .form-box-text-a {
     color: var(--iris);
@@ -1046,12 +1048,12 @@ input:focus+svg {
 
 @media only screen and (min-width: 768px) {
     .modal {       
-    min-width: 408px;
-    max-height: 584px;
-    padding: 72px 24px 24px 24px;
+        min-width: 408px;
+        max-height: 584px;
+        padding: 72px 24px 24px 24px;
     }
-.form-box-text-span {
-    margin-top: 0;
+    .form-box-text-span {
+        margin-top: 0;
     }
 }
 
